--- a/conf.d/xdebug.ini
+++ b/conf.d/xdebug.ini
@@ -1,14 +1,14 @@
-xdebug.remote_host=${XDEBUG_HOST}
-xdebug.remote_port=${XDEBUG_PORT}
+#xdebug.remote_host=${XDEBUG_HOST}
+#xdebug.remote_port=${XDEBUG_PORT}
 xdebug.idekey=PHPSTORM
-xdebug.remote_autostart=0
-xdebug.remote_enable=1
+#xdebug.remote_autostart=0
+#xdebug.remote_enable=1
 xdebug.cli_color=1
-xdebug.profiler_enable=0
-xdebug.profiler_output_dir="/tmp/phpstorm/tmp/profiling"
+#xdebug.profiler_enable=0
+#xdebug.profiler_output_dir="/tmp/phpstorm/tmp/profiling"
 
 xdebug.remote_handler=dbgp
-xdebug.remote_mode=req
+#xdebug.remote_mode=req
 
 xdebug.var_display_max_children=-1
 xdebug.var_display_max_data=-1
