--- a/conf.d/xdebug.ini
+++ b/conf.d/xdebug.ini
@@ -1,6 +1,6 @@
-#xdebug.remote_host=${XDEBUG_HOST}
-#xdebug.remote_port=${XDEBUG_PORT}
-xdebug.idekey=PHPSTORM
+xdebug.client_host=${XDEBUG_HOST}
+xdebug.client_port=${XDEBUG_PORT}
+xdebug.idekey=${XDEBUG_IDE_KEY}
 #xdebug.remote_autostart=0
 #xdebug.remote_enable=1
 xdebug.cli_color=1
