Added more settings for xdebug

--- a/conf.d/xdebug.ini
+++ b/conf.d/xdebug.ini
@@ -7,6 +7,10 @@ xdebug.cli_color=1
 #xdebug.profiler_enable=0
 #xdebug.profiler_output_dir="/tmp/phpstorm/tmp/profiling"
 
+xdebug.mode=debug,develop
+xdebug.output_dir="/tmp"
+xdebug.log=/tmp/xdebug.log
+
 xdebug.remote_handler=dbgp
 #xdebug.remote_mode=req
 
